<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://www.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.concord</groupId>
    <artifactId>concord</artifactId>
    <version>1.0</version>

    <description>Concord is a (work in progress) chat application project for the technically curious.</description>

    <organization>
        <name>University Of Gothenburg</name>
    </organization>

    <properties>
        <skipTests>true</skipTests>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>2.0</version>
        </dependency>
        <dependency>
            <groupId>com.jgoodies</groupId>
            <artifactId>jgoodies-forms</artifactId>
            <version>1.9.0</version>
        </dependency>
        <dependency>
            <groupId>com.jidesoft</groupId>
            <artifactId>jide-oss</artifactId>
            <version>3.6.18</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>21-ea+24</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.12.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>

        <finalName> <!-- CONFIGURATION OF THE NAME OF THE JAR FILE GENERATED WHILE BUILDING -->
            ${project.artifactId}
        </finalName>

        <plugins>

            <plugin> <!-- EXECUTES THE JAR FILE WITH JAVA GOAL IN VERIFY PHASE, USE mvn verify TO BUILD AND EXEC -->
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <mainClass>Main.ChatApplication</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <phase>verify</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>

            </plugin>

            <plugin> <!-- BUILDS A JAR FILE WITH Main.ChatApplication AS MAINCLASS -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>Main.ChatApplication</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <plugin> <!-- BUILDS AN UBER JAR CONTAINING ALL DEPENDENCIES -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.outputDirectory}</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            
        </plugins>
    </build>
</project>